# Riot-API-async

./: README.md  pyproject.toml  requirements.txt
datadragon/: champion.json  champion.py  item.json  item.py  summoner.json  summoner.py
examples/: account_endpoint_examples.py  error_handling_example.py
riot_api/: __init__.py  base_client.py  client.py  error_handler.py  exceptions.py  rate_limit_client.py  utils.py
riot_api/types/: __init__.py  base_types.py  converters.py  endpoints.py  http_types.py  region.py  riot.py  str_enum.py
riot_api/types/dto/: __init__.py  account_dto.py  base_model.py  league_dto.py
riot_api/types/dto/match/: __init__.py  match_dto.py  match_ids_dto.py  timeline_dto.py
riot_api/types/dto/match_dto/: __init__.py  match_dto.py
riot_api/types/enums/: __init__.py  champions.py  match.py  summoner_spells.py  wards.py
riot_api/types/league_of_legends/: __init__.py  items.py  summoner_spell.py
riot_api/types/request/: __init__.py  endpoints.py  http_types.py  routes.py
test/: conftest.py  test_endpoints.py  test_json_parse.py
test/responses/: get_account_by_puuid.json  get_account_by_riot_id.json  get_league_entry_by_tier.json  get_match_by_match_id.json
tests/: test_endpoints.py  test_json_parse.py  test_rate_limit_client.py
tests/responses/: get_account_region.json  get_challenger_league.json  get_grandmaster_league.json  get_league_by_league_id.json  get_master_league.json  get_match_timeline.json
